gcc/testsuite/rust/rustc/ui/parser/pat-tuple-1.rs
fn main() {
    match (0, 1) {
        (, ..) => {} // { dg-error "" "" { target *-*-* } }
    }
}

